# AI-Predictive-Intelligence

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  FIXES_SUMMARY.txt  LICENSE  QUICK_START.sh  README.md  data_manifest.json  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  run_phases.sh  validate_week1_week2.py  verify_setup.py
.github/workflows/: ci-cd.yml  ci.yml
AWS Connection/: __init__.py  training_pipeline.py
configs/: best_params.yaml  best_training_config.yaml  test_config.yaml  training_config.yaml
dashboard/: QUICK_REFERENCE.sh  README_REALTIME.md  app.py  app_realtime.py  realtime_utils.py  start_dashboard.sh  styles.py  test_integration.py  utils.py
monitoring/: prometheus.yml
reports/: full_technical_audit_20260312.md
scripts/: advanced_scheduler.py  analyze_mlflow.py  bootstrap_data.py  debug_nlp_nan.py  download_kaggle_datasets.py  generate_global_regime.py  generate_mock_nlp.py  inspect_checkpoint.py  run_full_pipeline.py  run_no_collection.py  run_phase_6_only.py  run_phase_7_only.py  run_phase_8_only.py  run_training_only.py  sync_to_s3.py  test_api_keys.py  test_multi_horizon.py  test_regime.py  test_s3_connection.py  validate_imports.py  validate_pipeline.py
src/api/: app.py  app_old.py  schemas.py
src/cloud_storage/: aws_connection.py  aws_storage.py
src/data_collection/: async_fetcher.py
src/data_processing/: build_sequences.py  (+8 more)
tests/: __mock_selected_features.yaml  test_api_security.py  test_data_processing.py  test_feature_selection.py  test_metrics.py  test_models.py  test_pipelines_integration.py
(+99 files in other folders)
